--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,9 +40,9 @@ header a img {
   height: 70px;
 }
 
-input#image-form {
-	display: none;
-}
+// input#image-form {
+// 	display: none;
+// }
 
 footer{
   height: 65px;
