--- a/app/views/admins/facilities/index.html.erb
+++ b/app/views/admins/facilities/index.html.erb
@@ -1,16 +1,30 @@
 <h2>おすすめ施設一覧</h2>
 
+<%= render partial: 'layouts/flash' %>
+
+<div class="a card mt-5">
+<h3 class="mt-5 ml-5">
+  <span class="badge badge-pill badge-primary">投稿一覧</span>
+</h3>
 
 <div class="row">
-  <% @facilities.each do |f| %>
-    <div class="col-md-4">
-      <div class="box">
-      	<%= link_to admins_facility_path(f) do %>
-      	  <%= attachment_image_tag f, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"100×100" %>
-      	<% end %>
-      <div><%= f.name %></div>
-      <div><%= link_to "詳細",admins_facility_path(f), class: "btn btn-outline-success" %></div>
+  <div class="row col-md-8 col-sm-12">
+    <% @facilities.each do |f| %>
+    <div class="col-12 col-md-4">
+      <div class="card mt-5 ml-5 mb-5" style="width: 100%;">
+        <%= link_to admins_facility_path(f) do %>
+          <%= attachment_image_tag f, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
+        <% end %>
+        <div class="card-body">
+          <h5 class="card-title"><%= f.name %></h5>
+          <%= link_to "詳細",admins_facility_path(f), class: "btn btn-outline-primary" %>
+        </div>
       </div>
     </div>
-  <% end %>
-</div>
+    <% end %>
+    <div class="pagenate mx-auto">
+      <%= paginate @facilities %>
+    </div>
+  </div>
+
+
