--- a/app/views/admins/facilities/new.html.erb
+++ b/app/views/admins/facilities/new.html.erb
@@ -1,3 +1,6 @@
+<div class="card mx-auto mt-5" style="width: 80%;">
+  <div class="card-body mx-auto">
+
 <%= form_with model:@facility, url: admins_facilities_path, local:true do |f| %>
   <div class="row">
   	<div class="col-xs-10">
@@ -23,7 +26,7 @@
   	      <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating"></label>
-  	      	   <%= f.text_field :name, placeholder: "名前" %>
+  	      	   <%= f.text_field :name, placeholder: "名前", class: "form-control" %>
             </div>
   	      </th>
   	  	</tr>
@@ -34,7 +37,7 @@
   	  	  <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating"></label>
-  	  	  	   <%= f.text_area :body, placeholder: "内容" %>
+  	  	  	   <%= f.text_area :body, placeholder: "内容", class: "form-control" %>
             </div>
   	  	  </th>
   	  	</tr>
@@ -45,7 +48,7 @@
   	  	  <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating"></label>
-  	  	  	   <%= f.text_area :address, placeholder: "住所" %>
+  	  	  	   <%= f.text_area :address, placeholder: "住所", class: "form-control" %>
             </div>
   	  	  </th>
   	  	</tr>
@@ -59,3 +62,5 @@
   	</div>
   </div>
 <% end %>
+</div>
+</div>
