--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -1,7 +1,7 @@
 <div class="top-wrapper mt-5">
 
     <div class="row">
-      <div class="row col-md-6 mt-5 mb-5">
+      <div class="row col-md-6 mt-3 mb-5">
     <div class="top">
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-<div class="card text-center mt-5">
+<div class="card text-center mt-5 mb-5">
   <div class="card-header">
   </div>
   <div class="card-body">
