--- a/app/views/users/facilities/index.html.erb
+++ b/app/views/users/facilities/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="a card mt-5">
 <h3 class="mt-5 ml-5">
-  <span class="badge badge-pill badge-primary">おすすめ施設一覧</span>
+  <span class="badge badge-pill badge-primary">枚方おすすめスポット一覧</span>
 </h3>
 
 <div class="row">
