--- a/app/views/admins/facilities/index.html.erb
+++ b/app/views/admins/facilities/index.html.erb
@@ -1,10 +1,9 @@
-<h2>おすすめ施設一覧</h2>
 
 <%= render partial: 'layouts/flash' %>
 
 <div class="a card mt-5">
 <h3 class="mt-5 ml-5">
-  <span class="badge badge-pill badge-primary">投稿一覧</span>
+  <span class="badge badge-pill badge-primary">枚方おすすめスポット一覧</span>
 </h3>
 
 <div class="row">
