--- a/app/views/admins/facilities/edit.html.erb
+++ b/app/views/admins/facilities/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="card mx-auto mt-5" style="width: 100%;">
+  <div class="card-body mx-auto mt-5">
+
 <%= form_with model:@facility, url: admins_facility_path(@facility), local:true do |f| %>
   <div class="row">
   	<div class="col-xs-10">
@@ -20,7 +23,7 @@
   	      <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating">名称</label>
-  	      	   <%= f.text_field :name, placeholder: "名称" %>
+  	      	   <%= f.text_field :name, placeholder: "名称", class: "form-control" %>
             </div>
   	      </th>
   	  	</tr>
@@ -31,7 +34,7 @@
   	  	  <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating">内容</label>
-  	  	  	   <%= f.text_area :body, placeholder: "内容" %>
+  	  	  	   <%= f.text_area :body, placeholder: "内容", class: "form-control" %>
             </div>
   	  	  </th>
   	  	</tr>
@@ -42,7 +45,7 @@
   	  	  <th>
             <div class="form-group">
               <label for="exampleInputEmail1" class="bmd-label-floating">住所</label>
-  	  	  	   <%= f.text_area :address, placeholder: "住所" %>
+  	  	  	   <%= f.text_area :address, placeholder: "住所", class: "form-control" %>
             </div>
   	  	  </th>
   	  	</tr>
@@ -61,3 +64,5 @@
   	</div>
   </div>
 <% end %>
+</div>
+</div>
