レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,6 @@
 }
 .container{
   width:1170px;
-  // padding:15px;
   margin:auto;
   height: 800px;
 }
@@ -40,6 +39,7 @@ header a img {
   height: 70px;
 }
 
+// プレビュー機能
 // input#image-form {
 // 	display: none;
 // }
@@ -47,8 +47,6 @@ header a img {
 footer{
   height: 65px;
   width: 100%;
-  // position: absolute;
-  // bottom: 0;
   text-align: center;
   margin-top: 30px;
 }
