--- a/app/views/admins/facilities/show.html.erb
+++ b/app/views/admins/facilities/show.html.erb
@@ -1,28 +1,35 @@
 <div class="card mt-5">
-<div class="mx-auto mt-5">
-<%= attachment_image_tag @facility, :image, :fill, 1070, 300, fallback: "no_image.jpg",size:"100×100" %>
-<p>閲覧数:<%= @facility.impressions_count %></p>
+  <div class="mx-auto mt-5">
+    <%= attachment_image_tag @facility, :image, :fill, 1070, 300, fallback: "no_image.jpg",size:"100×100" %>
+    <p>閲覧数:<%= @facility.impressions_count %></p>
+  </div>
+  <div class="card-body mt-3">
+        <p>名称</p>
+        <p><%= @facility.name %></p>
+        <p><%= @facility.body %></p>
+        <p>住所</p>
+        <p><%= @facility.address %></p>
+        <!-- GoogleMAP -->
+        <div class="mt-5">
+          <div id="map"></div>
+        </div>
+        <!-- GoogleMAP -->
+  </div>
+</div>
+<div class="mt-3">
+  <%= link_to "編集する",edit_admins_facility_path(@facility), class: "btn btn-outline-success" %>
+</div>
 
-</div>
-<div class="card-body mt-3">
-<p>名称</p>
-<p><%= @facility.name %></p>
-<p><%= @facility.body %></p>
-<p>住所</p>
-<p><%= @facility.address %></p>
-
-<div class="mt-5">
-<div id="map"></div>
-</div>
-</div>
-</div>
-
+<!-- css -->
 <style>
 #map{
   height: 300px;
   width: 1070px;
 }
 </style>
+<!-- css -->
+
+<!-- GoogleMAPjavascript -->
 <script type="text/javascript">
     function initMap() {
 
@@ -54,9 +61,8 @@
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
 </script>
+<!-- GoogleMAPjavascript -->
 
-<div class="mt-3">
-  <%= link_to "編集する",edit_admins_facility_path(@facility), class: "btn btn-outline-success" %>
-</div>
+
 
 
