--- a/app/views/users/favorites/_favorite.html.erb
+++ b/app/views/users/favorites/_favorite.html.erb
@@ -1,11 +1,11 @@
 
 
 <% if user_signed_in? %>
-    <% if post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
+    <% if post.favorited_by?(current_user) %> <!-- ログインしているユーザーがいいねしたかどうかで分岐 -->
         <h5><p><span>お気に入り: </span><%=link_to '', users_post_favorites_path(post.id), method: :delete, remote: true, class:'fas fa-heart fa-2x' %></p></h5>
     <% else %>
         <h5><p><span>お気に入り: </span><%=link_to "", users_post_favorites_path(post.id), method: :post, remote: true, class:'far fa-heart fa-2x faa-pulse animated-hover' %></p></h5>
     <% end %>
-  <% else %>
+<% else %>
     <p><span>お気に入り数: </span><%= post.favorites.count %></p>
-  <% end %>
+<% end %>
