--- a/app/views/users/favorites/destroy.js.erb
+++ b/app/views/users/favorites/destroy.js.erb
@@ -1,3 +1,3 @@
 
-
+// Ajax処理
 $('#favorites_buttons_<%= @post.id %>').html("<%= j(render partial: 'users/favorites/favorite', locals: {post: @post}) %>");
