--- a/app/views/users/inquiry/thanks.html.erb
+++ b/app/views/users/inquiry/thanks.html.erb
@@ -1,6 +1,7 @@
-<div class="page-header">
-  <h1>お問い合わせ</h1>
+<div class="card mx-auto mt-5" style="width: 50%;">
+  <div class="card-body mx-auto">
+	<p>
+	  お問い合わせ頂きありがとうございました。
+	</p>
+  </div>
 </div>
-<p>
-  お問い合わせいただきありがとうございました。
-</p>
