--- a/app/views/users/post/index.html.erb
+++ b/app/views/users/post/index.html.erb
@@ -1,97 +1,101 @@
 <%= render partial: 'layouts/flash' %>
 
 <div class="a card mt-5">
-<h3 class="mt-5 ml-5">
-  <span class="badge badge-pill badge-primary">投稿一覧</span>
-</h3>
+    <h3 class="mt-5 ml-5">
+      <span class="badge badge-pill badge-primary">投稿一覧</span>
+    </h3>
+    <div class="row">
+      <!-- 投稿一覧 -->
+          <div class="row col-md-8 col-sm-12">
+              <% @posts.each do |p| %>
+              <div class="col-12 col-md-4">
+                <div class="card mt-5 ml-5 mb-5" style="width: 100%;">
+                  <%= link_to users_post_path(p) do %>
+                    <%= attachment_image_tag p, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
+                  <% end %>
+                  <div class="card-body">
+                    <h5 class="card-title"><%= p.title %></h5>
+                    <p class="card-text line_wrap"><%= p.body %></p>
+                    <%= link_to "詳細",users_post_path(p), class: "btn btn-outline-primary" %>
+                  </div>
+                </div>
+              </div>
+              <% end %>
+              <div class="pagenate mx-auto">
+                <%= paginate @posts %>
+              </div>
+          </div>
+      <!-- 投稿一覧 -->
+      <!-- ランキング全体 -->
+          <div class="col-md-4 col-sm-12">
+              <div class="ml-5 mt-5">
+      <!-- 閲覧数ランキング -->
+                  <div class="card">
+                     <span class="badge badge-primary">閲覧数ランキング</span>
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>順位</th>
+                            <th>名前</th>
+                            <th>閲覧数</th>
+                          </tr>
+                        </thead>
 
-<div class="row">
-  <div class="row col-md-8 col-sm-12">
-    <% @posts.each do |p| %>
-    <div class="col-12 col-md-4">
-      <div class="card mt-5 ml-5 mb-5" style="width: 100%;">
-        <%= link_to users_post_path(p) do %>
-          <%= attachment_image_tag p, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
-        <% end %>
-        <div class="card-body">
-          <h5 class="card-title"><%= p.title %></h5>
-          <p class="card-text line_wrap"><%= p.body %></p>
-          <%= link_to "詳細",users_post_path(p), class: "btn btn-outline-primary" %>
-        </div>
-      </div>
-    </div>
-    <% end %>
-    <div class="pagenate mx-auto">
-      <%= paginate @posts %>
-    </div>
-  </div>
+                        <tbody>
+                          <% @most_viewed.each.with_index(1) do |rank, i| %>
+                            <tr>
+                              <td><%= "#{i}" %></td>
+                              <td>
+                                <%= link_to users_post_path(rank) do %>
+                                  <%= rank.title %>
+                                <% end %>
+                              </td>
+                              <td><%= rank.impressions_count %></td>
+                            </tr>
+                          <% end %>
+                        </tbody>
+                      </table>
+                  </div>
+      <!-- 閲覧数ランキング -->
+      <!-- お気に入りランキング -->
+                  <div class="mt-5">
+                    <div class="card">
+                      <span class="badge badge-primary">お気に入りランキング</span>
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>順位</th>
+                            <th>名前</th>
+                            <th>いいね数</th>
+                          </tr>
+                        </thead>
 
-
-  <div class="col-md-4 col-sm-12">
-    <div class="ml-5 mt-5">
-      <div class="card">
-      <span class="badge badge-primary">閲覧数ランキング</span>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>順位</th>
-            <th>名前</th>
-            <th>閲覧数</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @most_viewed.each.with_index(1) do |rank, i| %>
-            <tr>
-              <td><%= "#{i}" %></td>
-              <td>
-                <%= link_to users_post_path(rank) do %>
-                  <%= rank.title %>
-                <% end %>
-              </td>
-              <td><%= rank.impressions_count %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+                        <tbody>
+                          <% @all_ranks.each.with_index(1) do |post, i| %>
+                            <tr>
+                              <td><%= "#{i}" %></td>
+                              <td>
+                                <%= link_to users_post_path(post) do %>
+                                  <%= post.title %>
+                                <% end %>
+                              </td>
+                              <td><%= post.favorites.count %></td>
+                            </tr>
+                          <% end %>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+      <!-- お気に入りランキング -->
+              </div>
+          </div>
+      <!-- ランキング全体 -->
     </div>
-
-    <div class="mt-5">
-    <div class="card">
-      <span class="badge badge-primary">お気に入りランキング</span>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>順位</th>
-            <th>名前</th>
-            <th>いいね数</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @all_ranks.each.with_index(1) do |post, i| %>
-            <tr>
-              <td><%= "#{i}" %></td>
-              <td>
-                <%= link_to users_post_path(post) do %>
-                  <%= post.title %>
-                <% end %>
-              </td>
-              <td><%= post.favorites.count %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    </div>
-    </div>
-  </div>
 </div>
-</div>
 
 
 
-
+<!-- css -->
 <style>
 .a {
   background-color: ;
