--- a/app/views/users/post/new.html.erb
+++ b/app/views/users/post/new.html.erb
@@ -1,83 +1,84 @@
 <div class="card mx-auto mt-5" style="width: 80%;">
   <div class="card-body mx-auto">
 
-<%= form_with model:@post, url: users_post_index_path, local:true do |f| %>
-<%= render 'layouts/error_messages', model: f.object %>
-  <div class="row">
-  	<div class="col-xs-10">
-  	  <table class="table">
-  	  	<thead>
-  	  	<tr>
-  	  	  <th>
-  	  	  	<%= f.label :"画像" %><span class="mb-5 badge badge-danger">必須</span>
-  	  	  </th>
-  	  	  <th>
-  	  	  	<div class="mt-5 mb-5">
-  	  	  	  <%= f.attachment_field :image, id: "image-form" %>
-  	  	  	</div>
-  	  	  </th>
-  	  	</tr>
-  	  	<tr>
-  	      <th>
-  	      	<%= f.label :"タイトル" %><span class="badge badge-danger">必須</span>
-  	      </th>
-  	      <th>
-              <div class="form-group">
-                <label for="exampleInputEmail1" class="bmd-label-floating">タイトル</label>
-                  <%= f.text_field :title, class: "form-control" %>
-              </div>
-  	      </th>
-  	  	</tr>
-  	  	<tr>
-  	  	  <th>
-  	  	  	<%= f.label :"内容" %>
-  	  	  </th>
-  	  	  <th>
-              <div class="form-group">
-                <label for="exampleInputEmail1" class="bmd-label-floating">内容</label>
-  	  	  	     <%= f.text_area :body, class: "form-control" %>
-              </div>
-  	  	  </th>
-  	  	</tr>
-  	  	<tr>
-  	  	  <th>
-  	  		<%= f.label :"住所" %><span class="badge badge-danger">必須</span>
-  	  	  </th>
-  	  	  <th>
-              <div class="form-group">
-                <label for="exampleInputEmail1" class="bmd-label-floating">住所</label>
-  	  	  	     <%= f.text_area :address, class: "form-control" %>
-              </div>
-  	  	  </th>
-  	  	</tr>
-        <tr>
-          <th>
-            <%= f.label :"行き方" %>
-          </th>
-          <th>
-            <div class="form-group">
-                <label for="exampleInputEmail1" class="bmd-label-floating">行き方</label>
-                 <%= f.text_area :access, class: "form-control" %>
-              </div>
-          </th>
-        </tr>
-  	  	<tr>
-          <th>
-          </th>
-  	  	  <th>
-            <div class="post ml-5">
-  	  	  	  <%= f.submit "投稿",class:"btn btn-outline-primary" %>
-            </div>
-  	  	  </th>
-  	  	</tr>
-  	  </thead>
-  	  </table>
-  	</div>
+    <%= form_with model:@post, url: users_post_index_path, local:true do |f| %>
+    <%= render 'layouts/error_messages', model: f.object %>
+      <div class="row">
+      	<div class="col-xs-10">
+      	  <table class="table">
+      	  	<thead>
+      	  	<tr>
+      	  	  <th>
+      	  	  	<%= f.label :"画像" %><span class="mb-5 badge badge-danger">必須</span>
+      	  	  </th>
+      	  	  <th>
+      	  	  	<div class="mt-5 mb-5">
+      	  	  	  <%= f.attachment_field :image, id: "image-form" %>
+      	  	  	</div>
+      	  	  </th>
+      	  	</tr>
+      	  	<tr>
+      	      <th>
+      	      	<%= f.label :"タイトル" %><span class="badge badge-danger">必須</span>
+      	      </th>
+      	      <th>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1" class="bmd-label-floating">タイトル</label>
+                      <%= f.text_field :title, class: "form-control" %>
+                  </div>
+      	      </th>
+      	  	</tr>
+      	  	<tr>
+      	  	  <th>
+      	  	  	<%= f.label :"内容" %>
+      	  	  </th>
+      	  	  <th>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1" class="bmd-label-floating">内容</label>
+      	  	  	     <%= f.text_area :body, class: "form-control" %>
+                  </div>
+      	  	  </th>
+      	  	</tr>
+      	  	<tr>
+      	  	  <th>
+      	  		<%= f.label :"住所" %><span class="badge badge-danger">必須</span>
+      	  	  </th>
+      	  	  <th>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1" class="bmd-label-floating">住所</label>
+      	  	  	     <%= f.text_area :address, class: "form-control" %>
+                  </div>
+      	  	  </th>
+      	  	</tr>
+            <tr>
+              <th>
+                <%= f.label :"行き方" %>
+              </th>
+              <th>
+                <div class="form-group">
+                    <label for="exampleInputEmail1" class="bmd-label-floating">行き方</label>
+                     <%= f.text_area :access, class: "form-control" %>
+                  </div>
+              </th>
+            </tr>
+      	  	<tr>
+              <th>
+              </th>
+      	  	  <th>
+                <div class="post ml-5">
+      	  	  	  <%= f.submit "投稿",class:"btn btn-outline-primary" %>
+                </div>
+      	  	  </th>
+      	  	</tr>
+      	  </thead>
+      	  </table>
+      	</div>
+      </div>
+    <% end %>
   </div>
-<% end %>
-</div>
 </div>
 
+<!-- css -->
 <style>
 img {
   height: 150px;
