--- a/app/views/users/relationships/create.js.erb
+++ b/app/views/users/relationships/create.js.erb
@@ -1,3 +1,4 @@
+// Ajax処理
 $('#follow_buttons_<%= @user.id %>').html("<%= j(render partial: 'users/relationships/relationship', locals: {user: @user}) %>");
 $('#follow_count_<%= @user.id %>').html("<%= j(render partial: 'users/users/profile') %>");
 
