--- a/app/views/users/relationships/destroy.js.erb
+++ b/app/views/users/relationships/destroy.js.erb
@@ -1,2 +1,3 @@
+// Ajax処理
 $('#follow_buttons_<%= @user.id %>').html("<%= j(render partial: 'users/relationships/relationship', locals: {user: @user}) %>");
 $('#follow_count_<%= @user.id %>').html("<%= j(render partial: 'users/users/profile') %>");
