--- a/app/views/users/users/followers.html.erb
+++ b/app/views/users/users/followers.html.erb
@@ -1,33 +1,32 @@
 <div class="card mx-auto mt-5" style="width: 80%;">
   <div class="card-body mx-auto">
-
-<table class="table table-striped">
-
-  <% @users.each do |user| %>
-  <tr>
-  	<td>
-  	  <%= attachment_image_tag @user, :image, :fill, 100, 100, fallback: "no_image.jpg",size:"10×10" %>
-  	</td>
-  	<td>
-  	  <p><span>name: </span><%= link_to user.name, users_user_path(user.id) %></p>
-  	</td>
-    <td>
-      フォロー数<%= user.followings.count %>
-      フォロワー数<%= user.followers.count %>
-    </td>
-    <td>
-      <%= link_to "ユーザーをみにいく", users_user_path(user), class: "btn btn-raised btn-success" %>
-    </td>
-  	<% if current_user != user %>
-  	<td>
-  		<div id="follow_buttons_<%= user.id %>">
-          <%= render partial: 'users/relationships/relationship', locals: { user: user } %>
-      </div>
-  	</td>
-  	<% end %>
-    </tr>
-	<% end %>
-</table>
-
-</div>
+    <table class="table table-striped">
+      <% @users.each do |user| %>
+        <tr>
+        	<td>
+        	  <%= attachment_image_tag @user, :image, :fill, 100, 100, fallback: "no_image.jpg",size:"10×10" %>
+        	</td>
+        	<td>
+        	  <p><span>name: </span><%= link_to user.name, users_user_path(user.id) %></p>
+        	</td>
+          <td>
+            フォロー数<%= user.followings.count %>
+            フォロワー数<%= user.followers.count %>
+          </td>
+          <td>
+            <%= link_to "ユーザーをみにいく", users_user_path(user), class: "btn btn-raised btn-success" %>
+          </td>
+        	<% if current_user != user %>
+        	<td>
+            <!-- Ajax処理 -->
+        		<div id="follow_buttons_<%= user.id %>">
+                <%= render partial: 'users/relationships/relationship', locals: { user: user } %>
+            </div>
+            <!-- Ajax処理 -->
+        	</td>
+        	<% end %>
+          </tr>
+    	<% end %>
+    </table>
+　</div>
 </div>
