--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
               <% end %>
 
               <% else %>
-              <%= link_to users_root_path do %>
+              <%= link_to root_path do %>
                 <%= image_tag "HiraPedia-logo.png" %>
               <% end %>
               <% end %>
@@ -90,7 +90,7 @@
 
         <% else %>
         <ul class="list-group ml-5">
-          <a class="list-group-item"><%= link_to "Home", users_root_path %></a>
+          <a class="list-group-item"><%= link_to "Home", root_path %></a>
           <a class="list-group-item"><%= link_to "about", users_about_path %></a>
           <a class="list-group-item"><%= link_to "Sign Up", new_user_registration_path %></a>
           <a class="list-group-item"><%= link_to "Log In", new_user_session_path %></a>
