--- a/app/views/users/home/about.html.erb
+++ b/app/views/users/home/about.html.erb
@@ -26,6 +26,8 @@
 <div class="card-columns mt-5">
   <div class="card">
     <%= image_tag "post.jpg", :size =>'250x260', class:"card-img-top" %>
+  </div>
+  <div class="card">
     <div class="card-body">
       <h5 class="card-title"><i class="far fa-comment"></i> コメント</h5>
       <p class="card-text text-muted">投稿に対してコメントを送ることが出来ます</p>
@@ -41,6 +43,8 @@
   </div>
   <div class="card">
     <%= image_tag "sns.jpg", :size =>'250x250', class:"card-img-top" %>
+  </div>
+  <div class="card">
     <div class="card-body">
       <h5 class="card-title"><i class="far fa-heart"></i> いいね</h5>
       <p class="card-text text-muted">投稿に対していいねを送ることが出来ます</p>
@@ -58,11 +62,13 @@
   </div>
   <div class="card">
     <%= image_tag "fun.jpg", :size =>'250x250', class:"card-img-top" %>
-    <div class="card-body">
-      <h5 class="card-title"><i class="far fa-handshake"></i> フォロー</h5>
+  </div>
+  <div class="card">
+  <div class="card-body">
+    <h5 class="card-title"><i class="far fa-handshake"></i> フォロー</h5>
       <p class="card-text text-muted">気になる人をフォローして投稿をチェックすることが出来ます</p>
       <p class="card-text"><small class="text-muted">Follow</small></p>
-    </div>
+  </div>
   </div>
   <div class="card">
     <div class="card-body">
